# cobra-py

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  THEPLAN.md  pyproject.toml  raylib.patch  tasks.py
cobra_py/: __init__.py  __main__.py  graphics_client.py  graphics_server.py  kbd_layout.py  keysyms.py  prompt_utils.py  repl.py  rl.py  sprite_layer.py  terminal.py
cobra_py/resources/fonts/: monoid_license.md
examples/: cobra.py  g_client.py  g_server.py  raygui_checkboxes.py  raylib_fonts.py  raylib_hello.py  raylib_terminal.py  shader.py
include/: _raylib.h  gui_textbox_extended.h  raygui.h
includes/: raylib.h
