[tool.poetry]
name = "cobra_py"
version = "0.0.1"
description = "An 80s style Python runtime and development environment"
authors = ["Roberto Alsina <roberto.alsina@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyglet = "^1.5.7"
pillow = "^7.2.0"
glooey = "^0.3.4"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}
rope = "^0.17.0"
invoke = "^1.4.1"
cffi = "^1.14.3"
isort = "^5.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
