[tool.poetry]
name = "cobra_py"
version = "0.0.2"
description = "An 80s style Python runtime and development environment"
authors = ["Roberto Alsina <roberto.alsina@gmail.com>"]
license = "MIT"
include = ["examples/*", "README.md", "tasks.py", "raylib.patch", "include/*"]

[tool.poetry.dependencies]
python = "^3.8"
pyte = "^0.8.0"
ipcqueue = "^0.9.6"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}
rope = "^0.17.0"
invoke = "^1.4.1"
cffi = "^1.14.3"
isort = "^5.5.4"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
